# machine-learning-test-demo

./: README.md  pyproject.toml
mltest/: input.py  mnist.py  model.py
tests/: test_input.py  test_model_convergence.py  test_model_input_and_output.py
